--- a/ACT.css
+++ b/ACT.css
@@ -1,6 +1,15 @@
 .ACT-wrapper h4 {
 	text-transform: uppercase;
 	}
+
+.ATC-wrapper ul li{
+	list-style-type:disc;
+	list-style-position: outside;
+	margin-bottom: 3px;
+	margin-left: 2em;
+
+}
+
 	
 li.subcat {
 	margin-bottom:0px; 
