--- a/ACT_view.css
+++ b/ACT_view.css
@@ -3,17 +3,17 @@
 	background:#CDDCEC;
 	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
 	font-size:small;
-	margin:8px 0 16px;
+	margin:0;
 	text-align:center;
+	border: 1px solid #333
 }
 
 #form_container
 {
 	background:#fff;
-	
 	margin:0 auto;
 	text-align:left;
-	width:700px;
+	width:900px;
 }
 
 #top
@@ -303,7 +303,7 @@ span.symbol
 
 input.text
 {
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
+	background:#fff url(shadow.gif) repeat-x top;
 	border-bottom:1px solid #ddd;
 	border-left:1px solid #c3c3c3;
 	border-right:1px solid #c3c3c3;
@@ -324,7 +324,7 @@ input.file
 
 textarea.textarea
 {
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
+	background:#fff url(shadow.gif) repeat-x top;
 	border-bottom:1px solid #ddd;
 	border-left:1px solid #c3c3c3;
 	border-right:1px solid #c3c3c3;
@@ -342,7 +342,7 @@ select.select
 	font-size:100%;
 	margin:1px 0;
 	padding:1px 0 0;
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
+	background:#fff url(shadow.gif) repeat-x top;
 	border-bottom:1px solid #ddd;
 	border-left:1px solid #c3c3c3;
 	border-right:1px solid #c3c3c3;
