--- a/ACT_view.css
+++ b/ACT_view.css
@@ -16,22 +16,6 @@
 	width:900px;
 }
 
-#top
-{
-	display:block;
-	height:10px;
-	margin:10px auto 0;
-	width:650px;
-}
-
-#bottom
-{
-	display:block;
-	height:10px;
-	margin:0 auto;
-	width:650px;
-}
-
 form.appnitro
 {
 	margin:20px 20px 0;
@@ -51,12 +35,6 @@ form.appnitro
 	overflow:hidden;
 }
 
-
-img
-{
-	behavior:url(css/iepngfix.htc);
-	border:none;
-}
 
 
 /**** Form Section ****/
@@ -217,7 +195,7 @@ form li .datepicker
 	display:block;
 }
 
-.form_description h2
+.form_description .ACT_h2
 {
 	clear:left;
 	font-size:160%;
@@ -273,14 +251,17 @@ form .section_break p
 input.button_text
 {
 	overflow:visible;
-	padding:0 7px;
+	padding:5px;
 	width:auto;
+	color:white;
+	background-color:#4B75B3;
 }
 
 .buttons input
 {
 	font-size:120%;
 	margin-right:5px;
+	font-size:95%;
 }
 
 /**** Inputs and Labels ****/
@@ -355,7 +336,7 @@ input.currency
 	text-align:right;
 }
 
-input.checkbox
+input [type=checkbox]
 {
 	display:block;
 	height:13px;
@@ -364,7 +345,7 @@ input.checkbox
 	width:13px;
 }
 
-input.radio
+input [type=radio]
 {
 	display:block;
 	height:13px;
@@ -522,7 +503,7 @@ form .guidelines
 	border:1px solid #e6e6e6;
 	color:#444;
 	font-size:80%;
-	left:100%;
+	left:80%;
 	line-height:130%;
 	margin:0 0 0 8px;
 	padding:8px 10px 9px;
@@ -579,38 +560,6 @@ form li:hover .guidelines
     margin:0pt 0pt 3px;
 }
 
-/*** Password ****/
-ul.password{
-    margin-top:60px;
-    margin-bottom: 60px;
-    text-align: center;
-}
-.password h2{
-    color:#DF0000;
-    font-weight:bold;
-    margin:0pt auto 10px;
-}
-
-.password input.text {
-   font-size:170% !important;
-   width:380px;
-   text-align: center;
-}
-.password label{
-   display:block;
-   font-size:120% !important;
-   padding-top:10px;
-   font-weight:bold;
-}
-
-#li_captcha{
-   padding-left: 5px;
-}
-
-
-#li_captcha span{
-	float:none;
-}
 
 /** Embedded Form **/
 
@@ -643,198 +592,4 @@ ul.password{
 }
 
 
-
-/*** Calendar **********************/
-div.calendar { position: relative; }
-
-.calendar table {
-cursor:pointer;
-border:1px solid #ccc;
-font-size: 11px;
-color: #000;
-background: #fff;
-font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
-}
-
-.calendar .button { 
-text-align: center;    
-padding: 2px;          
-}
-
-.calendar .nav {
-background:#f5f5f5;
-}
-
-.calendar thead .title { 
-font-weight: bold;      
-text-align: center;
-background: #dedede;
-color: #000;
-padding: 2px 0 3px 0;
-}
-
-.calendar thead .headrow { 
-background: #f5f5f5;
-color: #444;
-font-weight:bold;
-}
-
-.calendar thead .daynames { 
-background: #fff;
-color:#333;
-font-weight:bold;
-}
-
-.calendar thead .name { 
-border-bottom: 1px dotted #ccc;
-padding: 2px;
-text-align: center;
-color: #000;
-}
-
-.calendar thead .weekend { 
-color: #666;
-}
-
-.calendar thead .hilite { 
-background-color: #444;
-color: #fff;
-padding: 1px;
-}
-
-.calendar thead .active { 
-background-color: #d12f19;
-color:#fff;
-padding: 2px 0px 0px 2px;
-}
-
-
-.calendar tbody .day { 
-width:1.8em;
-color: #222;
-text-align: right;
-padding: 2px 2px 2px 2px;
-}
-.calendar tbody .day.othermonth {
-font-size: 80%;
-color: #bbb;
-}
-.calendar tbody .day.othermonth.oweekend {
-color: #fbb;
-}
-
-.calendar table .wn {
-padding: 2px 2px 2px 2px;
-border-right: 1px solid #000;
-background: #666;
-}
-
-.calendar tbody .rowhilite td {
-background: #FFF1AF;
-}
-
-.calendar tbody .rowhilite td.wn {
-background: #FFF1AF;
-}
-
-.calendar tbody td.hilite { 
-padding: 1px 1px 1px 1px;
-background:#444 !important;
-color:#fff !important;
-}
-
-.calendar tbody td.active { 
-color:#fff;
-background: #529214 !important;
-padding: 2px 2px 0px 2px;
-}
-
-.calendar tbody td.selected { 
-font-weight: bold;
-border: 1px solid #888;
-padding: 1px 1px 1px 1px;
-background: #f5f5f5 !important;
-color: #222 !important;
-}
-
-.calendar tbody td.weekend { 
-color: #666;
-}
-
-.calendar tbody td.today { 
-font-weight: bold;
-color: #529214;
-background:#D9EFC2;
-}
-
-.calendar tbody .disabled { color: #999; }
-
-.calendar tbody .emptycell { 
-visibility: hidden;
-}
-
-.calendar tbody .emptyrow { 
-display: none;
-}
-
-.calendar tfoot .footrow { 
-text-align: center;
-background: #556;
-color: #fff;
-}
-
-.calendar tfoot .ttip { 
-background: #222;
-color: #fff;
-font-size:10px;
-border-top: 1px solid #dedede;
-padding: 3px;
-}
-
-.calendar tfoot .hilite { 
-background: #aaf;
-border: 1px solid #04f;
-color: #000;
-padding: 1px;
-}
-
-.calendar tfoot .active { 
-background: #77c;
-padding: 2px 0px 0px 2px;
-}
-
-.calendar .combo {
-position: absolute;
-display: none;
-top: 0px;
-left: 0px;
-width: 4em;
-border: 1px solid #ccc;
-background: #f5f5f5;
-color: #222;
-font-size: 90%;
-z-index: 100;
-}
-
-.calendar .combo .label,
-.calendar .combo .label-IEfix {
-text-align: center;
-padding: 1px;
-}
-
-.calendar .combo .label-IEfix {
-width: 4em;
-}
-
-.calendar .combo .hilite {
-background: #444;
-color:#fff;
-}
-
-.calendar .combo .active {
-border-top: 1px solid #999;
-border-bottom: 1px solid #999;
-background: #dedede;
-font-weight: bold;
-}
 
